# trustfall-poc

./: .gitattributes  .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
baselines/: __init__.py  anthropic_runner.py  openai_runner.py
corpsim/: __init__.py
corpsim/ariba/: __init__.py  tools.py
corpsim/common/: __init__.py  scenarios.py  schemas.py  state.py  types.py
corpsim/email/: __init__.py  tools.py
corpsim/eventbus/: __init__.py  bus.py  cascades.py
corpsim/itsm/: __init__.py  tools.py
dashboard/: Landing.html  __init__.py  dashboard.html  index.html  methodology.html  motion.js  research.css  results-data.js  scenarios.html  serve.py  styles.css
harness/: __init__.py  metrics.py  run.py  runner.py
report/: findings.md
results/: gpt54.json  gpt54mini.json  haiku45.json  smoke_claude.json  smoke_gpt.json  sonnet46.json
scenarios/t1_composition/: T1-0001.yaml  T1-0002.yaml  T1-0003.yaml  T1-0004.yaml  T1-0005.yaml  T1-0006.yaml  T1-0007.yaml  T1-0008.yaml  T1-0009.yaml  T1-0010.yaml
scenarios/t2_cascading/: T2-0001.yaml  T2-0002.yaml  T2-0003.yaml  T2-0004.yaml  T2-0005.yaml  T2-0006.yaml  T2-0007.yaml  T2-0008.yaml  T2-0009.yaml  T2-0010.yaml
scenarios/t4_injection/: T4-0001.yaml  T4-0002.yaml  T4-0003.yaml  T4-0004.yaml  T4-0005.yaml  T4-0006.yaml  T4-0007.yaml  T4-0008.yaml  T4-0009.yaml  T4-0010.yaml
tests/: smoke.py
